--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,7 @@
-app_web:
-    resource: "@AppBundle/Controller/Web"
-    type:     annotation
-
 app_api:
     resource: "@AppBundle/Controller/Api"
     type: annotation
+
+users:
+    type:     rest
+    resource: AppBundle\Controller\Api\UserController
