--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "guzzlehttp/guzzle": "~6.0",
         "phpunit/phpunit": "^5.6",
-        "friendsofsymfony/rest-bundle": "^2.1"
+        "friendsofsymfony/rest-bundle": "^2.1",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
