--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,7 @@
-app_api:
-    resource: "@AppBundle/Controller/Api"
+app:
+    resource: "@AppBundle/Controller"
     type: annotation
 
 users:
     type:     rest
-    resource: AppBundle\Controller\Api\UserController
+    resource: AppBundle\Controller\UserController
