--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "guzzlehttp/guzzle": "~6.0",
         "phpunit/phpunit": "^5.6",
         "friendsofsymfony/rest-bundle": "^2.1",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "symfony/dependency-injection": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
