--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - '7.0'
 
 before_script:
+    - cp app/config/parameters.yml.dist app/config/parameters.yml
     - composer install
     - bin/console doctrine:schema:create
     - echo y | bin/console fixtures:load
