update exclude dirs

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,9 +22,9 @@
         <whitelist>
             <directory>src</directory>
             <exclude>
-                <directory>src/*Bundle/Resources</directory>
-                <directory>src/*/*Bundle/Resources</directory>
-                <directory>src/*/Bundle/*Bundle/Resources</directory>
+                <directory>./vendor</directory>
+                <directory>./app/Resources</directory>
+                <directory>./src/AppBundle/Resources</directory>
             </exclude>
         </whitelist>
     </filter>
