--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 /app/config/parameters.yml
-/build/
 /phpunit.xml
 /var/*
 !/var/cache
@@ -11,7 +10,8 @@
 !/var/sessions
 /var/sessions/*
 !var/sessions/.gitkeep
-!var/SymfonyRequirements.php
+/var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
 /app/data/meetup.sqlite
+/web/config.php
