--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ php: 7.0
 before_script:
   - composer self-update
   - composer install
-  - bin/console doctrine:schema:create
-  - echo y | bin/console fixtures:load
+  - bin/console doctrine:schema:create --env=test
+  - echo y | bin/console fixtures:load --env=test
   - bin/console server:start
 
 script: vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-text
