--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,10 @@
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "guzzlehttp/guzzle": "~6.0",
         "phpunit/phpunit": "^5.6",
-        "friendsofsymfony/rest-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "symfony/dependency-injection": "^3.1"
+        "symfony/dependency-injection": "^3.1",
+        "white-october/pagerfanta-bundle": "^1.0",
+        "jms/serializer-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
