--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -34,3 +34,12 @@ services:
         class: AppBundle\Pagination\PaginationFactory
         arguments:
             - '@router'
+
+    # serializer
+    link_serialization_subscriber:
+        class: AppBundle\Serializer\LinkSerializationSubscriber
+        arguments:
+            - '@router'
+            - '@annotation_reader'
+        tags:
+            - { name: jms_serializer.event_subscriber }
