--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,14 +14,11 @@
     </php>
 
     <testsuites>
-        <testsuite name="all">
-            <directory>tests</directory>
-        </testsuite>
         <testsuite name="unit">
-            <directory>tests/Unit</directory>
+            <directory>./tests/Unit</directory>
         </testsuite>
         <testsuite name="functional">
-            <directory>tests/Functional</directory>
+            <directory>./tests/Functional</directory>
         </testsuite>
     </testsuites>
 
