add php cs fixer to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: php
+sudo: false
+
+cache:
+  directories:
+    - $HOME/.composer/cache/files
 
 php: 7.0
 
@@ -15,6 +20,7 @@ after_script:
   - bin/console server:stop
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - vendor/bin/php-cs-fixer fix --diff --dry-run -v
 
 notifications:
   email: false
