--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
-        "hautelook/alice-bundle": "^1.4"
+        "hautelook/alice-bundle": "^1.4",
+        "friendsofphp/php-cs-fixer": "^2.0"
     },
     "scripts": {
         "symfony-scripts": [
